--- a/CrudApp/appsettings.json
+++ b/CrudApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=DESKTOP-SGPI9UL\\SQLEXPRESS;Database=CrudAppDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DevConnection": "Server=LAPTOP-V30LP6TV;Database=Inventaire;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
